--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -66,3 +66,9 @@
         display: none;
     }
 }
+
+@media(min-width: 768px) and (max-width: 1023px) {
+    .navbar{
+        position: fixed;
+    }
+}
