--- a/assets/css/skill.css
+++ b/assets/css/skill.css
@@ -35,7 +35,7 @@
     }
 
     .skill__container--item {
-        margin: 20px;
+        margin: 15px;
     }
 
     .skill__item-image {
